fix: CORS and 403 Forbidden by allowing OPTIONS and using origin patterns