@@ -37,12 +37,8 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // ✅ Fetch allowed origins from database, with localhost fallbacks
-        String rawOrigins = configRepo.findByConfigKey("cors.allowed-origins")
-                .map(SystemConfig::getConfigValue)
-                .orElse("http://localhost,http://localhost:3000,http://localhost:5173,http://localhost:5174,http://localhost:8080,http://127.0.0.1,http://127.0.0.1:3000,http://127.0.0.1:5173,http://127.0.0.1:5174,http://192.168.68.54,http://192.168.68.54:3000,http://192.168.68.54:5173,http://192.168.68.54:5174");
-
-        config.setAllowedOrigins(Arrays.asList(rawOrigins.split(",")));
+        // ✅ Allow all origins during development to avoid port mismatches
+        config.setAllowedOriginPatterns(List.of("*"));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         
         // 👋 EXPLICITLY allow ALL headers to avoid 403 Forbidden with custom headers
